2022-09-04 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge cpp branch to trunk.

2022-09-04 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/hash-table.h:
	  Revert a compile warning fix.

2022-09-02 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc,
	  support/cpp/gcc/ggc-common.cc,
	  support/cpp/gcc/hash-map.h,
	  support/cpp/gcc/hash-table.h,
	  support/cpp/gcc/vec.h:
	  Fix compile warnings

2022-09-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/valdiag/tests/universal.c,
	  support/valdiag/tests/universal2.c:
	  Separate out a test that needs to reside in a file on its own, since the diagnostic is emitted even inside #if 0.

2022-08-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/checkedint.c.in:
	  Disable test for mcs51 medium memory model, where it fails due to lack of memory.

2022-08-31 Felix Salfelder <felix AT salfelder.org>

	* sdcc/support/cpp/gcc/opts.cc,
	  sdcc/support/cpp/libcpp/mkdeps.cc:
	  Test x2.

2022-08-30 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/configure, support/cpp/configure.ac:
	  Omit gmp/mpfr checks and GCC_TOPLEV_SUBDIRS.

2022-08-23 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/configure, support/cpp/configure.ac,
	  support/cpp/gcc/configure, support/cpp/gcc/configure.ac:
	  Reduce diff against upstream gcc.

2022-08-21 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in,
	  support/regression/cases/Makefile.in:
	  Test summary depends on test set.

2022-08-20 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/Makefile.in:
	  Do not clean no-longer autogenerated files.

2022-08-30 Felix Salfelder <felix AT salfelder.org>

	* support/regression/cases/Makefile.in:
	  Add distclean rule.

2022-08-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCmem.c,
	  support/regression/tests/bug-3040.c.in: