@@ -1,3 +1,9 @@
+2022-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCcse.c,
+	  support/regression/tests/bug-3470.c:
+	  Fix part of bug #3470.
+
 2022-09-04 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* Merge cpp branch to trunk.
